refactor: 내가 매칭된 목록 조회(페이지네이션 응답값 추가) 로직 수정